corrected z-index value.
git-svn-id: https://plugins.svn.wordpress.org/creative-image-slider/tags/1.0.2@1008503 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/includes/assets/css/main.css
+++ b/includes/assets/css/main.css
@@ -403,7 +403,7 @@ cursor: pointer;
 	height: auto;
 	position: absolute;
 	display: block;
-	z-index: 10;
+	z-index: 9999;
 	top: 12px;
 	right: 6px;
 	background: #333;
